--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@mui/icons-material": "^5.14.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
