Setup theming + added dark/light mode feature

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.0.1",
     "next-auth": "^4.24.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@mui/icons-material": "^5.14.16",
